--- a/2.1 Iterators and Generators.ipynb
+++ b/2.1 Iterators and Generators.ipynb
@@ -45,7 +45,9 @@
    "source": [
     "## Reference:-\n",
     "1. [Loop like a native: while, for, iterators, generators - Ned Batchelder @ PyCon 2013](https://www.youtube.com/watch?v=EnSu9hHGq5o)\n",
-    "2. [Looping Like a Pro in Python, David DB Baumgold @ PyCon 2017](https://www.youtube.com/watch?v=u8g9scXeAcI)"
+    "2. [Looping Like a Pro in Python, David DB Baumgold @ PyCon 2017](https://www.youtube.com/watch?v=u8g9scXeAcI)\n",
+    "3. [Python Generators Tutorial](https://www.dataquest.io/blog/python-generators-tutorial/)\n",
+    "4. [Generators - How to use them and the benefits you receive](https://www.youtube.com/watch?v=bD05uGo_sVI&index=33&list=PL-osiE80TeTt2d9bfVyTiXJA-UTHn6WwU)"
    ]
   },
   {
@@ -74,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
