--- a/2.2 List Comprehensions and Generator Expressions.ipynb
+++ b/2.2 List Comprehensions and Generator Expressions.ipynb
@@ -17,6 +17,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Transformation from standard loops to list comprehensions :\n",
+    "\n",
+    "- Standard for loops:\n",
+    "```python\n",
+    "    values = []\n",
+    "    for value in collection:\n",
+    "        if condition:\n",
+    "            values.append(expression)\n",
+    "```\n",
+    "\n",
+    "- List Comprehension\n",
+    "```python\n",
+    "    values = [expression for value in collection if condition]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Generator Expressions\n",
     "\n",
     "It takes a list and make a lazy iterable. **`yield`** keyword will take over function - which means you cannot control it anymore. You cannot `return` anything and you don't know what it will return.\n",
@@ -66,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
