--- a/Python Decorators and Metaclass.ipynb
+++ b/Python Decorators and Metaclass.ipynb
@@ -12,7 +12,11 @@
     "\n",
     "http://jfine-python-classes.readthedocs.io/en/latest/decorators-versus-metaclass.html\n",
     "\n",
-    "https://jeffknupp.com/blog/2013/11/29/improve-your-python-decorators-explained/"
+    "https://jeffknupp.com/blog/2013/11/29/improve-your-python-decorators-explained/\n",
+    "\n",
+    "[Decorators - Dynamically Alter The Functionality Of Your Functions](https://www.youtube.com/watch?v=FsAPt_9Bf3U)\n",
+    "\n",
+    "[Decorators - A powerful weapon in your python arsenal](https://www.youtube.com/watch?v=9oyr0mocZTg)\n"
    ]
   },
   {
